--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,8 @@
 /* Colors */
 :root {
   --color-default: #222222;
-  --color-primary: #008374;
-  --color-secondary: #f85a40;
+  --color-primary: #0066b2;
+  --color-secondary: #eec0c8;
 }
 
 /* Smooth scroll behavior */
@@ -43,7 +43,7 @@ a {
 }
 
 a:hover {
-  color: #00b6a1;
+  color: #005A9C;
   text-decoration: none;
 }
 
@@ -180,7 +180,7 @@ section {
 }
 
 .scroll-top:hover {
-  background: rgba(248, 90, 64, 0.8);
+  background: rgba(248, 149, 240, 0.8);
   color: #fff;
 }
 
@@ -238,7 +238,7 @@ section {
 # Header
 --------------------------------------------------------------*/
 .topbar {
-  background: #00796b;
+  background: #005A9C;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -428,7 +428,7 @@ section {
     font-size: 15px;
     text-transform: none;
     font-weight: 600;
-    color: #006a5d;
+    color: #005A9C;
   }
 
   .navbar .dropdown ul a i {
@@ -499,7 +499,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(0, 131, 116, 0.9);
+    background: #005A9C;
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -545,7 +545,7 @@ section {
   .navbar .getstarted:hover,
   .navbar .getstarted:focus:hover {
     color: #fff;
-    background: rgba(0, 131, 116, 0.8);
+    background: #005A9C;
   }
 
   .navbar .dropdown ul,
@@ -555,8 +555,8 @@ section {
     padding: 10px 0;
     margin: 10px 20px;
     transition: all 0.5s ease-in-out;
-    background-color: #007466;
-    border: 1px solid #006459;
+    background-color: #00689c;
+    border: 1px solid #005A9C;
   }
 
   .navbar .dropdown>.dropdown-active,
@@ -598,7 +598,7 @@ section {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0, 106, 93, 0.8);
+    background: #005b9ce6;
     z-index: 9996;
   }
 }
@@ -660,7 +660,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(var(--color-primary) 50%, rgba(0, 131, 116, 0.4) 52%);
+  background: radial-gradient(var(--color-primary) 50%, rgba(0, 52, 131, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -681,7 +681,7 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(0, 131, 116, 0.7);
+  border: 5px solid rgba(0, 81, 131, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
@@ -836,7 +836,7 @@ section {
   width: 94px;
   height: 94px;
   margin-bottom: 20px;
-  background: radial-gradient(var(--color-primary) 50%, rgba(0, 131, 116, 0.4) 52%);
+  background: radial-gradient(var(--color-primary) 50%, rgba(0, 63, 131, 0.4) 52%);
   border-radius: 50%;
   display: inline-block;
   position: relative;
@@ -855,7 +855,7 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(0, 131, 116, 0.7);
+  border: 5px solid rgba(0, 83, 131, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
@@ -996,7 +996,7 @@ section {
 }
 
 .services .service-item:hover .icon:before {
-  background: #00b6a1;
+  background: #005A9C;
 }
 
 .services .service-item:hover h3 {
@@ -1050,7 +1050,7 @@ section {
 
 .testimonials .testimonial-item .quote-icon-left,
 .testimonials .testimonial-item .quote-icon-right {
-  color: #009d8b;
+  color: #005A9C;
   font-size: 26px;
   line-height: 0;
 }
@@ -1293,7 +1293,7 @@ section {
 }
 
 .portfolio-details .portfolio-info .btn-visit:hover {
-  background: #009d8b;
+  background: #005A9C;
 }
 
 .portfolio-details .portfolio-description h2 {
@@ -1337,7 +1337,7 @@ section {
 
 .portfolio-details .portfolio-description .testimonial-item .quote-icon-left,
 .portfolio-details .portfolio-description .testimonial-item .quote-icon-right {
-  color: #009d8b;
+  color: #005A9C;
   font-size: 26px;
   line-height: 0;
 }
@@ -1530,7 +1530,7 @@ section {
 }
 
 .pricing ul i {
-  color: #059652;
+  color: #005A9C;
   font-size: 24px;
   padding-right: 3px;
 }
@@ -1711,7 +1711,7 @@ section {
 # Contact Section
 --------------------------------------------------------------*/
 .contact .info-container {
-  background-color: var(--color-primary);
+  background-color: #005A9C;
   height: 100%;
   padding: 20px;
   border-radius: 10px 0 0 10px;
@@ -1720,7 +1720,7 @@ section {
 
 .contact .info-item {
   width: 100%;
-  background-color: #009282;
+  background-color: #0066b2;
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
@@ -1793,7 +1793,7 @@ section {
 .contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #059652;
+  background: #005A9C;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1813,7 +1813,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #059652;
+  border: 3px solid #005A9C;
   border-top-color: #fff;
   animation: animate-loading 1s linear infinite;
 }
@@ -1851,7 +1851,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: rgba(0, 131, 116, 0.8);
+  background: rgba(0, 76, 131, 0.8);
 }
 
 @keyframes animate-loading {
@@ -1963,7 +1963,7 @@ section {
   padding: 60px 30px;
   position: relative;
   overflow: hidden;
-  background: #008d7d;
+  background: #005b9c;
   box-shadow: 0 0 29px 0 rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
@@ -1995,7 +1995,7 @@ section {
 }
 
 .hero .icon-box:hover {
-  background: #009786;
+  background: #00519c;
 }
 
 .hero .icon-box:hover .title a,
@@ -2346,7 +2346,7 @@ section {
 }
 
 .blog .sidebar .search-form form button:hover {
-  background: rgba(0, 131, 116, 0.8);
+  background: rgba(0, 94, 131, 0.8);
 }
 
 .blog .sidebar .categories ul {
@@ -2524,7 +2524,7 @@ section {
 
 .blog .comments .reply-form input:focus {
   box-shadow: none;
-  border-color: rgba(0, 131, 116, 0.8);
+  border-color: rgba(0, 103, 131, 0.8);
 }
 
 .blog .comments .reply-form textarea {
@@ -2535,7 +2535,7 @@ section {
 
 .blog .comments .reply-form textarea:focus {
   box-shadow: none;
-  border-color: rgba(0, 131, 116, 0.8);
+  border-color: rgba(0, 103, 131, 0.8);
 }
 
 .blog .comments .reply-form .form-group {
@@ -2550,7 +2550,7 @@ section {
 }
 
 .blog .comments .reply-form .btn-primary:hover {
-  background-color: rgba(248, 90, 64, 0.8);
+  background-color: rgba(245, 135, 253, 0.8);
 }
 
 /*--------------------------------------------------------------
@@ -2624,7 +2624,7 @@ section {
 
 .footer .footer-links ul i {
   padding-right: 2px;
-  color: rgba(0, 131, 116, 0.8);
+  color: rgba(0, 92, 131, 0.8);
   font-size: 12px;
   line-height: 0;
 }
