--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,7 +180,7 @@ section {
 }
 
 .scroll-top:hover {
-  background: rgba(248, 149, 240, 0.8);
+  background: #ee95a4;
   color: #fff;
 }
 
@@ -1711,7 +1711,7 @@ section {
 # Contact Section
 --------------------------------------------------------------*/
 .contact .info-container {
-  background-color: #005A9C;
+  background-color: #fff;
   height: 100%;
   padding: 20px;
   border-radius: 10px 0 0 10px;
@@ -1720,11 +1720,11 @@ section {
 
 .contact .info-item {
   width: 100%;
-  background-color: #0066b2;
+  background-color: #eec0c8;
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
-  color: #fff;
+  color: #000000;
 }
 
 .contact .info-item:last-child {
@@ -1733,7 +1733,7 @@ section {
 
 .contact .info-item i {
   font-size: 20px;
-  color: #fff;
+  color: #000000;
   float: left;
   width: 44px;
   height: 44px;
@@ -1792,8 +1792,8 @@ section {
 
 .contact .php-email-form .sent-message {
   display: none;
-  color: #fff;
-  background: #005A9C;
+  color: #000000;
+  background: #eec0c8;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1813,7 +1813,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #005A9C;
+  border: 3px solid #eec0c8;
   border-top-color: #fff;
   animation: animate-loading 1s linear infinite;
 }
@@ -1842,16 +1842,16 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: var(--color-primary);
+  background: #eec0c8;
   border: 0;
   padding: 14px 45px;
-  color: #fff;
+  color: #000000;
   transition: 0.4s;
   border-radius: 50px;
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: rgba(0, 76, 131, 0.8);
+  background: #eec0c8(0, 76, 131, 0.8);
 }
 
 @keyframes animate-loading {
@@ -2558,9 +2558,9 @@ section {
 --------------------------------------------------------------*/
 .footer {
   font-size: 14px;
-  background-color: var(--color-primary);
+  background-color: #eec0c8;
   padding: 50px 0;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .footer .footer-info .logo {
@@ -2577,7 +2577,7 @@ section {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
-  color: #fff;
+  color: #000000;
   font-family: var(--font-primary);
 }
 
@@ -2593,16 +2593,16 @@ section {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 16px;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(0, 0, 0, 0.7);
   margin-right: 10px;
   transition: 0.3s;
 }
 
 .footer .social-links a:hover {
-  color: #fff;
-  border-color: #fff;
+  color: #000000;
+  border-color: #000000;
 }
 
 .footer h4 {
@@ -2640,14 +2640,14 @@ section {
 }
 
 .footer .footer-links ul a {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(0, 0, 0, 0.7);
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
 }
 
 .footer .footer-links ul a:hover {
-  color: #fff;
+  color: #000000;
 }
 
 .footer .footer-contact p {
